Upgrade rest-assured and remove preview compiler arg for upgrade to Java 15